--- a/shop_web/templates/index.html
+++ b/shop_web/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,12 +9,48 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
       integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
       crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   </head>
   <body>
-    <h1>Welcome to mini eCommerce</h1>
-    <p>
-      mini eCommerce is a virtual online shop built by the Django framework.
-    </p>
+    <!--TODO: separate navbar to be a block-->
+    <nav class="navbar bg-body-secondary navbar-expand-lg">
+      <div class="container-fluid d-flex justify-content-between">
+        <a class="navbar-brand ms-2" href="#">
+          <i class="bi bi-bag-fill"></i>
+          mini-eCommerce
+        </a>
+        <form class="input-group w-50" role="search">
+          <input
+            class="form-control"
+            type="search"
+            placeholder="Search"
+            aria-label="Search" />
+          <button class="btn btn-secondary" type="submit">
+            <i class="bi bi-search"></i>
+          </button>
+        </form>
+        <div class="nav">
+          <a class="nav-link" href="#">
+            <i class="bi bi-cart-fill"></i>
+            Cart
+          </a>
+          <a class="nav-link" href="#">
+            <i class="bi bi-receipt-cutoff"></i>
+            Order
+          </a>
+          <a class="nav-link" href="#">
+            <i class="bi bi-person-circle"></i>
+            Profile
+          </a>
+          <a class="btn btn-primary" href="">sign in</a>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <h1 class="text-center mt-5">Building...</h1>
+    </main>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
       integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ=="
