--- a/shop_web/templates/layout/base.html
+++ b/shop_web/templates/layout/base.html
@@ -19,12 +19,13 @@
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     </head>
-    <body class="h-100">
+    <body class="d-flex flex-column h-100">
         <header>
-            {% include "navbar.html" %}
+            {% include "layout/navbar.html" %}
         </header>
         <main class="h-100">
             {% block content %}
+                {% comment %} Loading Animation {% endcomment %}
                 <div class="h-100 d-flex justify-content-center align-items-center">
                     <div class="spinner-border fs-2" role="status">
                         <span class="visually-hidden">Loading...</span>
@@ -32,6 +33,8 @@
                 </div>
             {% endblock content %}
         </main>
+        {% comment %} footer {% endcomment %}
+        {% include "layout/footer.html" %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
                 integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ=="
                 crossorigin="anonymous"></script>
