feat: add favicon

--- a/shop_web/templates/layout/base.html
+++ b/shop_web/templates/layout/base.html
@@ -4,14 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description"
-              content="mini eCommerce is a virtual online shop built by Django.">
-        <meta name="keywords"  content="mini, ecommerce, shop, django">
+              content="mini eCommerce is a virtual online shop built by Django." />
+        <meta name="keywords" content="mini, ecommerce, shop, django" />
         <title>
             {% block page_title %}
                 mini eCommerce
             {% endblock page_title %}
         </title>
-        <link rel="icon" type="image/png" href="/images/icon/shopping-cart.png" />
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link rel="apple-touch-icon"
+              type="image/png"
+              href="/images/apple-touch-icon.png">
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
               integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
