chore: add Copyright in footer

--- a/shop_web/templates/layout/footer.html
+++ b/shop_web/templates/layout/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 border-top border-1">
     <div class="container text-center">
-        <span class="text-muted">© 2024-{% now "Y" %}</span>
+        <span class="text-muted">Copyright © 2024 Yanpin Chouli</span>
     </div>
 </footer>
