--- a/shop_web/templates/layout/navbar.html
+++ b/shop_web/templates/layout/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top bg-body-secondary navbar-expand-xl">
+<nav class="navbar bg-body-secondary navbar-expand-xl">
     <div class="container-fluid">
         <a class="navbar-brand ms-2" href="{% url "shop_page" %}">
             <i class="bi bi-bag-fill"></i>
