--- a/shop_web/templates/layout/navbar.html
+++ b/shop_web/templates/layout/navbar.html
@@ -1,26 +1,26 @@
-<nav class="navbar bg-body-secondary navbar-expand-xl">
+<nav class="navbar bg-body-secondary navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand ms-2" href="{% url "shop_page" %}">
             <i class="bi bi-bag-fill"></i>
             mini-eCommerce
         </a>
-        <form class="input-group w-50" role="search">
-            <input class="form-control"
-                   type="search"
-                   placeholder="Search"
-                   aria-label="Search" />
-            <button class="btn btn-secondary" type="submit">
-                <i class="bi bi-search"></i>
-            </button>
-        </form>
-        <button class="navbar-toggler"
+        <button class="navbar-toggler ms-auto my-1"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapseContent">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end"
+        <div class="collapse navbar-collapse justify-content-between"
              id="navbarCollapseContent">
+            <form class="input-group my-1 w-50" role="search">
+                <input class="form-control"
+                       type="search"
+                       placeholder="Search"
+                       aria-label="Search" />
+                <button class="btn btn-secondary" type="submit">
+                    <i class="bi bi-search"></i>
+                </button>
+            </form>
             <div class="navbar-nav">
                 <a class="nav-link m-1" href="#">
                     <i class="bi bi-cart-fill"></i>
@@ -34,7 +34,7 @@
                     <i class="bi bi-person-circle"></i>
                     Profile
                 </a>
-                <a class="btn btn-primary mx-3 my-1" href="">sign in</a>
+                <a class="btn btn-primary my-1" href="">sign in</a>
             </div>
         </div>
     </div>
