🐞 fix(template footer): 修正 footer 跑版問題

--- a/shop_web/templates/layout/footer.html
+++ b/shop_web/templates/layout/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-4 border-top border-1">
+<footer class="footer py-4 border-top border-1 fixed-bottom">
     <div class="container text-center">
         <span class="text-muted">Copyright © 2024 Yanpin Chouli</span>
     </div>
