--- a/shop_web/templates/layout/base.html
+++ b/shop_web/templates/layout/base.html
@@ -22,11 +22,11 @@
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     </head>
-    <body class="d-flex flex-column">
+    <body class="d-flex flex-column h-100">
         <header class="sticky-top">
             {% include "layout/navbar.html" %}
         </header>
-        <main class="container-fluid p-0">
+        <main class="flex-grow-1 p-0">
             {% block content %}
                 {% comment %} Loading Animation {% endcomment %}
                 <div class="h-100 d-flex justify-content-center align-items-center">
