--- a/shop_web/templates/layout/base.html
+++ b/shop_web/templates/layout/base.html
@@ -21,6 +21,8 @@
               crossorigin="anonymous" />
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+        {% block css_files %}
+        {% endblock css_files %}
     </head>
     <body class="d-flex flex-column h-100">
         <header class="sticky-top">
