--- a/shop_web/templates/shop.html
+++ b/shop_web/templates/shop.html
@@ -1,4 +1,11 @@
 {% extends "layout/base.html" %}
+{% load static %}
+{% block page_title %}
+    Shop | mini-eCommerce
+{% endblock page_title %}
+{% block css_files %}
+    <link rel="stylesheet" href="{% static 'css/shop_page.css' %}">
+{% endblock css_files %}
 {% block content %}
     {% comment %} djlint:off H006 {% endcomment %}
     {% include "partials/advertisement_banner.html" %}
@@ -23,16 +30,4 @@
             {% endfor %}
         </div>
     </div>
-    <style>
-        .product_card {
-            height: 25rem;
-        }
-
-        .multiline-ellipsis {
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2;
-            overflow: hidden;
-        }
-    </style>
 {% endblock content %}
