--- a/shop_web/templates/layout/navbar.html
+++ b/shop_web/templates/layout/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-secondary navbar-expand-lg">
+<nav class="navbar bg-body-secondary navbar-expand-lg shadow-sm">
     <div class="container-fluid">
         <a class="navbar-brand ms-2" href="{% url "shop_page" %}">
             <i class="bi bi-bag-fill"></i>
@@ -21,7 +21,7 @@
                     <i class="bi bi-search"></i>
                 </button>
             </form>
-            <div class="navbar-nav">
+            <div class="navbar-nav align-items-center">
                 <a class="nav-link m-1" href="#">
                     <i class="bi bi-cart-fill"></i>
                     Cart
