✨ feat(sign-in, sign-up): 新增 Sign in、Sign up 頁面

--- a/shop_web/templates/sign-up.html
+++ b/shop_web/templates/sign-up.html
@@ -1,12 +1,12 @@
 {% extends "layout/base.html" %}
 {% block page_title %}
-    Sign in | mini-eCommerce
+    Sign up | mini-eCommerce
 {% endblock page_title %}
 {% block content %}
     <div class="container h-100">
         <div class="card h-75 w-50 mx-auto mt-5">
             <div class="card-body d-flex flex-column">
-                <h1 class="card-title text-center">Sign in</h1>
+                <h1 class="card-title text-center">Sign up</h1>
                 <hr class="border-2">
                 <form action=""
                       method="post"
@@ -20,11 +20,15 @@
                            name="password"
                            placeholder="enter your password..."
                            class="form-control w-75 my-2">
-                    <button type="submit" class="btn btn-primary w-75 mt-5">Sign in</button>
+                    <input type="password"
+                           name="confirm password"
+                           placeholder="confirm your password..."
+                           class="form-control w-75 my-2">
+                    <button type="submit" class="btn btn-primary w-75 mt-5">Sign up</button>
                 </form>
                 <hr class="border-2">
                 <p class="card-text">
-                    Don't have an account? <a href="{% url 'sign_up' %}">Sign up</a>
+                    Already have an account? <a href="{% url 'sign_in' %}">Sign in</a>
                 </p>
             </div>
         </div>
