--- a/shop_web/templates/layout/navbar.html
+++ b/shop_web/templates/layout/navbar.html
@@ -12,7 +12,10 @@
         </button>
         <div class="collapse navbar-collapse justify-content-between"
              id="navbarCollapseContent">
-            <form class="input-group my-1 w-50" role="search">
+            <form method="get"
+                  action=""
+                  class="input-group my-1 w-50 mx-auto"
+                  role="search">
                 <input class="form-control"
                        type="search"
                        placeholder="Search"
@@ -34,7 +37,7 @@
                     <i class="bi bi-person-circle"></i>
                     Profile
                 </a>
-                <a class="btn btn-primary my-1" href="">sign in</a>
+                <a class="btn btn-primary my-1" href="{% url "sign_in" %}">sign in</a>
             </div>
         </div>
     </div>
