--- a/shop_web/templates/partials/advertisement_banner.html
+++ b/shop_web/templates/partials/advertisement_banner.html
@@ -1,20 +1,12 @@
 {% comment %} djlint:off H006 {% endcomment %}
 <div class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="https://fakeimg.pl/4000x400/?text=Advertisement"
-                 class="d-block w-100"
-                 alt="advertisement">
-        </div>
-        <div class="carousel-item">
-            <img src="https://fakeimg.pl/4000x400/?text=Advertisement2"
-                 class="d-block w-100"
-                 alt="advertisement2">
-        </div>
-        <div class="carousel-item">
-            <img src="https://fakeimg.pl/4000x400/?text=Advertisement3"
-                 class="d-block w-100"
-                 alt="advertisement3">
-        </div>
+        {% for item in '123'|make_list %}
+            <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                <img src="https://fakeimg.pl/4000x400/?text=Advertisement{{ item }}"
+                     class="d-block w-100"
+                     alt="advertisement{{ item }}">
+            </div>
+        {% endfor %}
     </div>
 </div>
