--- a/shop_web/templates/sign-up.html
+++ b/shop_web/templates/sign-up.html
@@ -8,23 +8,18 @@
             <div class="card-body d-flex flex-column">
                 <h1 class="card-title text-center">Sign up</h1>
                 <hr class="border-2">
-                <form action=""
+                <form action="{% url "sign_up" %}"
                       method="post"
-                      class="d-flex flex-column align-items-center flex-grow-1">
+                      class="d-flex flex-column align-items-stretch flex-grow-1">
                     {% csrf_token %}
-                    <input type="email"
-                           name="email"
-                           placeholder="enter your email..."
-                           class="form-control w-75 my-2">
-                    <input type="password"
-                           name="password"
-                           placeholder="enter your password..."
-                           class="form-control w-75 my-2">
-                    <input type="password"
-                           name="confirm password"
-                           placeholder="confirm your password..."
-                           class="form-control w-75 my-2">
-                    <button type="submit" class="btn btn-primary w-75 mt-5">Sign up</button>
+                    {% for field in form %}
+                        <div class="from-group my-3 px-5">
+                            {{ field.label_tag }}
+                            {{ field }}
+                            <p class="text-danger">{{ field.errors.as_text }}</p>
+                        </div>
+                    {% endfor %}
+                    <button type="submit" class="btn btn-primary align-self-center w-75 mt-5">Sign up</button>
                 </form>
                 <hr class="border-2">
                 <p class="card-text">
