--- a/shop_web/templates/layout/navbar.html
+++ b/shop_web/templates/layout/navbar.html
@@ -26,7 +26,7 @@
             </form>
             <div class="navbar-nav align-items-center">
                 {% if request.user.is_authenticated %}
-                    <a class="nav-link m-1" href="#">
+                    <a class="nav-link m-1" href="{% url "my_cart" %}">
                         <i class="bi bi-cart-fill"></i>
                         Cart
                     </a>
