🦄 refactor(template): {% url %} tag 裡使用的 url name 更新

--- a/shop_web/templates/cart_list.html
+++ b/shop_web/templates/cart_list.html
@@ -37,7 +37,7 @@
         {% empty %}
             <div class="text-center my-5">
                 <h2>Nothing at the moment...</h2>
-                <a href="{% url "shop_page" %}">Go to buy something</a>
+                <a href="{% url "product-list" %}">Go to buy something</a>
             </div>
         {% endfor %}
         <hr class="border-4">
