--- a/shop_web/templates/sign_in.html
+++ b/shop_web/templates/sign_in.html
@@ -25,7 +25,7 @@
                     </form>
                     <hr class="border-2">
                     <p class="card-text">
-                        Don't have an account? <a href="{% url 'sign_up' %}">Sign up</a>
+                        Don't have an account? <a href="{% url 'sign-up' %}">Sign up</a>
                     </p>
                 </div>
             </div>
