--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@
         </g>
     </svg>
     <h1>Page Not Found</h1>
-    <a href="{% url "shop_page" %}">Back to Home</a>
+    <a href="{% url "product_list" %}">Back to Home</a>
 </div>
 <style>
     html, body{
