--- a/shop_web/templates/layout/navbar.html
+++ b/shop_web/templates/layout/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar bg-body-secondary navbar-expand-lg shadow-sm">
     <div class="container-fluid">
-        <a class="navbar-brand ms-2" href="{% url "shop_page" %}">
+        <a class="navbar-brand ms-2" href="{% url "product-list" %}">
             <i class="bi bi-bag-fill"></i>
             mini-eCommerce
         </a>
@@ -26,7 +26,7 @@
             </form>
             <div class="navbar-nav align-items-center">
                 {% if request.user.is_authenticated %}
-                    <a class="nav-link m-1" href="{% url "my_cart" %}">
+                    <a class="nav-link m-1" href="{% url "cart-list" %}">
                         <i class="bi bi-cart-fill"></i>
                         Cart
                     </a>
@@ -40,9 +40,9 @@
                     </a>
                     <a class="btn btn-primary my-1" href="{% url "logout" %}">Logout</a>
                 {% elif request.path == "/sign-in/" %}
-                    <a class="btn btn-primary my-1" href="{% url "sign_up" %}">Sign up</a>
+                    <a class="btn btn-primary my-1" href="{% url "sign-up" %}">Sign up</a>
                 {% else %}
-                    <a class="btn btn-primary my-1" href="{% url "sign_in" %}">Sign in</a>
+                    <a class="btn btn-primary my-1" href="{% url "sign-in" %}">Sign in</a>
                 {% endif %}
             </div>
         </div>
