--- a/shop_web/templates/sign_up.html
+++ b/shop_web/templates/sign_up.html
@@ -9,7 +9,7 @@
                 <div class="card-body d-flex flex-column">
                     <h1 class="card-title text-center">Sign up</h1>
                     <hr class="border-2">
-                    <form action="{% url "sign_up" %}"
+                    <form action="{% url "sign-up" %}"
                           method="post"
                           class="d-flex flex-column align-items-stretch flex-grow-1">
                         {% csrf_token %}
@@ -24,7 +24,7 @@
                     </form>
                     <hr class="border-2">
                     <p class="card-text">
-                        Already have an account? <a href="{% url 'sign_in' %}">Sign in</a>
+                        Already have an account? <a href="{% url 'sign-in' %}">Sign in</a>
                     </p>
                 </div>
             </div>
