--- a/shop_web/templates/layout/navbar.html
+++ b/shop_web/templates/layout/navbar.html
@@ -30,7 +30,7 @@
                         <i class="bi bi-cart-fill"></i>
                         Cart
                     </a>
-                    <a class="nav-link m-1" href="#">
+                    <a class="nav-link m-1" href="{% url "order-list" %}">
                         <i class="bi bi-receipt-cutoff"></i>
                         Order
                     </a>
