--- a/shop_web/templates/order_detail.html
+++ b/shop_web/templates/order_detail.html
@@ -1,25 +1,38 @@
 {% extends "layout/base.html" %}
 {% block page_title %}
-    Order Detail | mini-eCommerce
+    {{ order.order_no }} | mini-eCommerce
 {% endblock page_title %}
 {% block content %}
-    <h1>Order Detail</h1>
-    <table class="table table-hover p-5">
-        <thead>
-            <tr class="row">
-                <th class="col">MerchantTradeNo</th>
-                <th class="col">Total</th>
-                <th class="col">Date</th>
-                <th class="col">Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="row">
-                <td class="col">{{ order_detail.MerchantTradeNo }}</td>
-                <td class="col">{{ order_detail.TradeAmt }}</td>
-                <td class="col">{{ order_detail.TradeDate }}</td>
-                <td class="col">Not Delivered</td>
-            </tr>
-        </tbody>
-    </table>
+    <a href="{% url 'order-list' %}"
+       class="btn btn-outline-info m-3 fw-bold"><i class="bi bi-arrow-left"></i> Back</a>
+    <div class="container d-flex flex-column align-items-center m-5">
+        <h1 class="fw-bold mb-4">{{ order.order_no }}</h1>
+        <table class="table table-striped w-75">
+            <thead>
+                <tr class="row border border-2">
+                    <th class="col">Name</th>
+                    <th class="col">Price</th>
+                    <th class="col">Quantity</th>
+                    <th class="col">Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in order_items %}
+                    <tr class="row border border-2 border-top-0">
+                        <td class="col">{{ item.product.name }}</td>
+                        <td class="col">{{ item.product.price }}</td>
+                        <td class="col">{{ item.quantity }}</td>
+                        <td class="col">{{ item.total }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+            <tfoot>
+                <tr class="row mt-2">
+                    <td class="col-8"></td>
+                    <td class="col-1 fs-4 fw-bold">Total</td>
+                    <td class="col-1 fs-4 fw-bold">{{ order.total }}</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
 {% endblock content %}
