--- a/shop_web/templates/layout/navbar.html
+++ b/shop_web/templates/layout/navbar.html
@@ -13,13 +13,14 @@
         <div class="collapse navbar-collapse justify-content-between"
              id="navbarCollapseContent">
             <form method="get"
-                  action=""
+                  action="{% url "product-list" %}"
                   class="input-group my-1 w-50 mx-auto"
                   role="search">
                 <input class="form-control"
                        type="search"
                        placeholder="Search"
-                       aria-label="Search" />
+                       aria-label="Search"
+                       name="search" />
                 <button class="btn btn-secondary" type="submit">
                     <i class="bi bi-search"></i>
                 </button>
