🐞 fix(order): 修復 order_list 與 order_detail 頁面裡的 table 元素沒有置中的問題

--- a/shop_web/templates/order_detail.html
+++ b/shop_web/templates/order_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
     <a href="{% url 'order-list' %}"
        class="btn btn-outline-info m-3 fw-bold"><i class="bi bi-arrow-left"></i> Back</a>
-    <div class="container d-flex flex-column align-items-center m-5">
+    <div class="container d-flex flex-column align-items-center m-5 mx-auto">
         <h1 class="fw-bold mb-4">{{ order.order_no }}</h1>
         <table class="table table-striped w-75">
             <thead>
