--- a/shop_web/templates/order_list.html
+++ b/shop_web/templates/order_list.html
@@ -3,7 +3,7 @@
     My Orders | mini-eCommerce
 {% endblock page_title %}
 {% block content %}
-    <div class="container d-flex flex-column align-items-center m-5">
+    <div class="container d-flex flex-column align-items-center m-5 mx-auto">
         <h1 class="fw-bold mb-4">my orders</h1>
         <table class="table table-hover w-75">
             <thead>
